# FitVector

./: .env.example  .gitignore  DESIGN.md  IMPLEMENTATION_PLAN.md  README.md  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.claude/: launch.json
.github/workflows/: e2e.yml
apps/web/: .eslintrc.json  .gitignore  dev.js  middleware.ts  next.config.js  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
apps/web/public/: sw.js  (+1 more)
docs/: SystemPrompt.txt.txt  api-contracts.md  database-schema.md  devops-testing.md  fitvector-prd-phase1.md  fitvector-prd-phase2.md  fitvector-prd-phase3.md  project-structure.md  scoring-engine.md  sql schema.txt  system-design.md  user-stories.md
docs/current status/: PROJECT_STATUS.md
docs/ui-ux/: redesign-plan.md
prompt/: prompt4-addon.md  starting-prompt.md
services/ai-engine/: .env.example  Dockerfile  pyproject.toml
services/ai-engine/src/: config.py  main.py  middleware.py
services/ai-engine/src/models/: common.py  job.py  outreach.py  resume.py  scoring.py
services/ai-engine/src/prompts/: cold_email.py  resume_tailor.py
services/ai-engine/src/routers/: assessment.py  email_finder.py  health.py  interview.py  outreach.py  resume.py  scoring.py  scraper.py  screening.py
services/ai-engine/src/services/: ai_service.py  deterministic_scorer.py  embedding_service.py  pdf_service.py  scraper_service.py  skills_analytics.py
services/ai-engine/src/utils/: jobspy_runner.py  proxy.py  rate_limiter.py  text.py
supabase/: config.toml  seed.sql  seed_phase2_phase3.sql  seed_question_bank.sql
(+484 files in other folders)
