[project]
name = "fitvector-ai-engine"
version = "0.1.0"
description = "FitVector AI Engine - FastAPI microservice for AI/ML workloads"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "google-genai>=1.0",
    "sentence-transformers>=3.0",
    "python-jobspy>=0.28",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "PyMuPDF>=1.24",
    "python-docx>=1.1",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "bullmq>=1.0",
    "numpy>=2.0",
    "json-repair>=0.30",
    "truststore>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
